--- a/data/car_3.ui
+++ b/data/car_3.ui
@@ -22,6 +22,9 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="toolTip">
+    <string>Добавление в сравнение</string>
+   </property>
    <property name="text">
     <string/>
    </property>
@@ -44,6 +47,9 @@
      <width>31</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="toolTip">
+    <string>Добавление в сравнение</string>
    </property>
    <property name="text">
     <string/>
@@ -93,6 +99,9 @@
      <width>41</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="toolTip">
+    <string>Удаление из корзины</string>
    </property>
    <property name="text">
     <string/>
